<resources>
    <string name="app_name">Mobilization TDD Workshop</string>
    <string name="email_header">Email</string>
    <string name="password_header">password</string>
    <string name="login_button">Login</string>
    <string name="login_call_error">api call error</string>
    <string name="empty_email_error">Email cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty.</string>
</resources>
